# task1

./: .gitignore  readme.html  readme.md  readme.qmd
filebeat/: filebeat.yml
pagentrs/: Cargo.toml
pagentrs/src/: main.rs
